Change name of equipment to equipement

--- a/Tests/Makefile
+++ b/Tests/Makefile
@@ -2,7 +2,7 @@
 CWD =$(shell dirname $(realpath $(firstword $(MAKEFILE_LIST))))
 
 bus_handlers	:=#$(CWD)/BusHandlers
-eq_handlers	:=$(CWD)/EquipmentHandlers
+eq_handlers	:=$(CWD)/EquipementHandlers
 
 tests		:=$(bus_handlers) $(eq_handlers)
 
