--- a/Tests/EquipementHandlers/Makefile
+++ b/Tests/EquipementHandlers/Makefile
@@ -1,4 +1,4 @@
-NAME_BIN := AnalogTempSensor.t
+NAME_BIN := EquipementHandlers.t
 LDLIBS := -l:EquipementHandlers/equipementHandlers.a -l:BusHandlers/busHandlers.a
 
 include ../common_test.mk
