--- a/Tests/EquipementHandlers/Makefile
+++ b/Tests/EquipementHandlers/Makefile
@@ -1,4 +1,4 @@
 NAME_BIN := EquipementHandlers.t
-LDLIBS := -l:EquipementHandlers/equipementHandlers.a -l:BusHandlers/busHandlers.a
+LDLIBS := -l:EquipementHandlers/equipementHandlers.a -l:BusHandlers/busHandlers.a -lgps -lm
 
 include ../common_test.mk
