Add SPI and IMU tests

--- a/Tests/Makefile
+++ b/Tests/Makefile
@@ -1,7 +1,7 @@
 # Definition of paths:
 CWD =$(shell dirname $(realpath $(firstword $(MAKEFILE_LIST))))
 
-bus_handlers	:=#$(CWD)/BusHandlers
+bus_handlers	:=$(CWD)/BusHandlers
 eq_handlers	:=$(CWD)/EquipementHandlers
 
 tests		:=$(bus_handlers) $(eq_handlers)
