Create thermostat and heater handlers (classes)

--- a/EquipementHandlers/Makefile
+++ b/EquipementHandlers/Makefile
@@ -8,7 +8,7 @@ NAME_BIN=
 # Name of the test
 NAME_TEST=
 # Additional libraries to be loaded when compiling.
-LDLIBS  = -lgps -lm
+LDLIBS  = -lgps -lm -lgpiodcxx -lpigpiod_if2 -lrt
 
 # If you want to create a librarie add lib, if you want an executable add bin.
 .PHONY: all
