--- a/Tests/EquipementHandlers/Makefile
+++ b/Tests/EquipementHandlers/Makefile
@@ -1,4 +1,6 @@
 NAME_BIN := EquipementHandlers.t
-LDLIBS := -l:EquipementHandlers/equipementHandlers.a -l:BusHandlers/busHandlers.a -l:Utils/utils.a -lgps -lm
+LDLIBS := -lgpiodcxx -l:EquipementHandlers/equipementHandlers.a \
+  		-l:BusHandlers/busHandlers.a -l:Utils/utils.a \
+		-lgps -lm -lpigpiod_if2 -lrt
 
 include ../common_test.mk
