--- a/Tests/EquipementHandlers/HeaterHandler/Makefile
+++ b/Tests/EquipementHandlers/HeaterHandler/Makefile
@@ -1,6 +1,6 @@
-NAME_BIN := Main.t
+NAME_BIN := HeaterHandler.t
 LDLIBS := -lgpiodcxx -l:EquipementHandlers/equipementHandlers.a \
   		-l:BusHandlers/busHandlers.a -l:Utils/utils.a \
-		-lgps -lm -lpigpiod_if2 -lrt -lgtest -lpthread
+		-lgps -lm -lpigpiod_if2 -lrt
 
-include ../common_test.mk
+include ../../common_test.mk
