Remove unused library

--- a/Tests/EquipementHandlers/Makefile
+++ b/Tests/EquipementHandlers/Makefile
@@ -1,5 +1,5 @@
 NAME_BIN := Main.t
-LDLIBS := -lgpiodcxx -l:EquipementHandlers/equipementHandlers.a \
+LDLIBS := -l:EquipementHandlers/equipementHandlers.a \
   		-l:BusHandlers/busHandlers.a -l:Utils/utils.a \
 		-lgps -lm -lpigpiod_if2 -lrt -lgtest -lpthread
 
