move HTL_Monitor directory to Tests

--- a/Tests/HTL_Monitor/Makefile
+++ b/Tests/HTL_Monitor/Makefile
@@ -3,4 +3,4 @@ LDLIBS := -l:EquipementHandlers/equipementHandlers.a \
   		-l:BusHandlers/busHandlers.a -l:Utils/utils.a \
 		-lgps -lm -lpigpiod_if2 -lrt -lpigpio
 
-include ../../common_test.mk
+include ../common_test.mk
