Update Tests for anemo and hh

--- a/Tests/EquipementHandlers/HeaterHandler/Makefile
+++ b/Tests/EquipementHandlers/HeaterHandler/Makefile
@@ -1,4 +1,4 @@
-NAME_BIN := HeaterHandler.t
+NAME_BIN := heater
 LDLIBS := -lgpiodcxx -l:EquipementHandlers/equipementHandlers.a \
   		-l:BusHandlers/busHandlers.a -l:Utils/utils.a \
 		-lgps -lm -lpigpiod_if2 -lrt
