--- a/Tests/HTL_Monitor/Makefile
+++ b/Tests/HTL_Monitor/Makefile
@@ -1,6 +1,6 @@
 NAME_BIN := htl_monitor
 LDLIBS := -l:EquipementHandlers/equipementHandlers.a \
   		-l:BusHandlers/busHandlers.a -l:Utils/utils.a \
-		-lgps -lm -lpigpiod_if2 -lrt -lpigpio
+		-lm -lpigpiod_if2 -lrt 
 
 include ../common_test.mk
