Add atomic library in makefile

--- a/Tests/EquipementHandlers/Makefile
+++ b/Tests/EquipementHandlers/Makefile
@@ -2,6 +2,6 @@ NAME_BIN := Main.t
 LDLIBS := -l:EquipementHandlers/equipementHandlers.a \
   		-l:BusHandlers/busHandlers.a -l:Utils/utils.a \
 		-lgps -lm -lpigpiod_if2 -lrt -lgtest -lpthread \
-		-lpigpio
+		-lpigpio -latomic
 
 include ../common_test.mk
