--- a/Tests/EquipementHandlers/CommandLineTests/HeaterHandler/Makefile
+++ b/Tests/EquipementHandlers/CommandLineTests/HeaterHandler/Makefile
@@ -1,6 +1,6 @@
 NAME_BIN := heater
-LDLIBS := -lgpiodcxx -l:EquipementHandlers/equipementHandlers.a \
+LDLIBS := -l:EquipementHandlers/equipementHandlers.a \
   		-l:BusHandlers/busHandlers.a -l:Utils/utils.a \
 		-lgps -lm -lpigpiod_if2 -lrt
 
-include ../../common_test.mk
+include ../../../common_test.mk
